# Photato-Phi-3-Custom-Model

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  conftest.py  model_recommendations.py  pyproject.toml  requirements.txt  run_tests.py  show_livebench_result.py  tuning_history.json
.github/: PULL_REQUEST_TEMPLATE.md
agent/: __init__.py  code_executor.py  self_healing_agent.py  unified_agent.py  web_search.py
benchmark_results/: README.md  __init__.py  compare_models.py  config.py  quick_compare.py
browser/: __init__.py  __main__.py  auto_debug.py  tracer.py
capabilities/: __init__.py  extended_thinking.py  j_lens.py  j_space.py  memory.py  multimodal.py  prompt_cache.py  rag.py  safety.py  streaming.py  structured_output.py
cli/: __init__.py  __main__.py  generation.py  model_backend.py  tui.py
data/: sample_training_data.jsonl
datas/: architecture_filesystem.jsonl  code_generation_all_languages.jsonl  devops_optimization_automation.jsonl  fullstack_development.jsonl  rollout-2026-07-19T17-44-09-019f7b7a-6f40-76e0-a8c3-49e459aba89c.jsonl  rollout-2026-07-19T17-44-09-019f7b7a-6f41-7c83-8dbf-a682a13c59ff.jsonl  rollout-2026-07-19T17-44-09-019f7b7a-7146-7851-b435-8b6dc7591db1.jsonl  rollout-2026-07-19T18-23-45-019f7b9e-b00f-7950-b307-1d4605c90ae1.jsonl  traces.jsonl
deployment/: __init__.py  docker_setup.py  registry.py
evaluation/: __init__.py  benchmark.py  harness.py  test_suite.py  testing.py
gateway/: __init__.py  api_gateway.py
graph/: __init__.py  pathfinding.py
(+67 files in other folders)
