[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "phi3-custom-model"
version = "0.1.0"
description = "Fine-tune, quantize, and run a custom Phi-3/Phi-4 model locally with agents, Claude-compatible tools, and reasoning capabilities."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Rhasan@dev", email = "Rbkhan00009@gmail.com"}
]

[tool.setuptools]
packages = [
    "tools",
    "capabilities",
    "agent",
    "inference",
    "training",
    "evaluation",
    "optimization",
    "deployment",
    "gateway",
    "monitoring",
    "graph",
    "cli",
    "mcp",
    "browser",
    "knowledge_graph",
    "orchestrator",
    "ide_plugin",
    "livebench",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
